[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
description = "Acme is a complete development toolkit for extending platform functionality"
edition = "2021"
homepage = "https://github.com/FL03/acme/wikis"
license = "Apache-2.0"
repository = "https://github.com/FL03/acme"
version = "0.2.5" # TODO - Update cargo package version

[workspace]
default-members = [
    "acme"
]
exclude = [ "xtask" ]
members = [
    "acme",
    "core",
    "derive",
    "macros",
    "crates/*",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
panic = "unwind"
rpath = false
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = false
panic = "unwind"
rpath = false
opt-level = "z"
overflow-checks = false
