[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com)"]
categories = []
description = "A client library for the Scattered Systems Ecosystem"
edition = "2021"
homepage = "https://gitlab.com/scsys/lib/crates/acme/-/wikis/home"
keywords = ["async", "scsys"]
license = "MIT"
name = "acme"
publish = true
readme = "README.md"
repository = "https://gitlab.com/scsys/lib/crates/acme"
version = "0.2.2" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[features]
default = ["core", "wasm"]
full = ["core", "extras", "wasm"]

core = [
    "minis"
]
extras = []

minis = ["acme-minis"]

wasm = [
    "wasm-ext"
]
wasm-ext = []

[build-dependencies]

[dependencies]
acme-minis = { optional = true, path = "../minis", version = "0.2.2" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]
