[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com)"]
categories = []
description = "Acme is a complete networking toolkit for wasm enabling dvelopers to quickly build powerful p2p applications"
edition = "2021"
homepage = "https://github.com/scattered-systems/acme/wikis"
keywords = ["async", "scsys"]
license = "MIT"
name = "acme"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/acme"
version = "0.2.2" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[features]
default = ["core", "wasm"]
full = ["core", "extras", "wasm"]

core = [
    "clusters",
    "conduits",
    "minis"
]
extras = []

clusters = ["acme-clusters"]
conduits = ["acme-conduits"]
minis = ["acme-minis"]

wasm = [
    "wasm-ext"
]
wasm-ext = []

[build-dependencies]

[dependencies]
acme-conduits = { optional = true, path = "../conduits", version = "0.2.2" }
acme-clusters = { optional = true, path = "../clusters", version = "0.2.2" }
acme-minis = { optional = true, path = "../minis", version = "0.2.2" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]
