[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com)"]
categories = []
description = "Acme is a complete development toolkit for extending platform functionality"
edition = "2021"
homepage = "https://github.com/scattered-systems/acme/wikis"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "acme"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/acme"
version = "0.2.5" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[features]
default = ["core"]
full = [
    "conduits", 
    "core", 
    "compilers",
    "derive",
    "extras", 
    "macros",
    "net", 
    "pipelines",
]

core = ["acme-core"]
derive = ["acme-derive/default"]
macros = ["acme-macros/default"]
extras = []

net = ["acme-net"]
conduits = ["acme-conduits"]
compilers = ["acme-compilers"]
pipelines = ["acme-pipelines"]

[build-dependencies]

[dependencies]
acme-conduits = { features = [], optional = true, path = "../crates/conduits", version = "0.2.5" }
acme-core = { features = [], optional = true, path = "../core", version = "0.2.5" }
acme-compilers = { features = [], optional = true, path = "../crates/compilers", version = "0.2.5" }
acme-derive = { features = [], optional = true, path = "../derive", version = "0.2.5" }
acme-macros = { features = [], optional = true, path = "../macros", version = "0.2.5" }
acme-net = { features = [], optional = true, path = "../crates/net", version = "0.2.5" }
acme-pipelines = { features = [], optional = true, path = "../crates/pipelines", version = "0.2.5" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
