[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://pzzld.eth.link/)"]
description = ""
edition = "2021"
keywords = ["blockchain", "toolkit"]
license = "MIT"
name = "app"
publish = false
readme = "README.md"
repository = "https://github.com/fl03/acme.git"
version = "0.1.0"

[features]
default = []

[[bin]]
bench = false
name = "app"
path = "src/main.rs"
test = false

[dependencies]
acme = { features = ["full"], version = "0.1.19" }
clap = { features = ["derive"], version = "3.1.18" }
config = "0.13.1"