[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com)"]
categories = []
description = "acme-clusters"
edition = "2021"
homepage = "https://github.com/scattered-systems/acme/wiki/"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "acme-clusters"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/acme"
version = "0.2.2" # TODO - Update cargo package version

[features]
default = ["core", "extras", "wasm"]
full = ["core", "extras", "wasm"]

core = []
extras = []
wasm = ["wasm-ext"]
wasm-ext = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
mio = "0.8.4"
scsys = { features = ["full"], version = "0.1.35" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["macros"], version = "1.21.2" }

[dev-dependencies]
acme = { path = "../acme" }

[target.wasm32-unknown-unknown]
