[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com)"]
categories = []
description = "Acme is a complete networking toolkit for wasm enabling dvelopers to quickly build powerful p2p applications"
edition = "2021"
homepage = "https://github.com/scattered-systems/acme/wikis"
keywords = ["async", "scsys"]
license = "MIT"
name = "acme-core"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/acme"
version = "0.2.2" # TODO - Update cargo package version

[features]

[lib]
crate-type = ["cdylib", "rlib"]
test = true


[build-dependencies]

[dependencies]


[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]
