[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com)"]
categories = []
description = "Acme is a complete networking toolkit for wasm enabling dvelopers to quickly build powerful p2p applications"
edition = "2021"
homepage = "https://github.com/scattered-systems/acme/wikis"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "acme-core"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/acme"
version = "0.2.2" # TODO - Update cargo package version

[features]
default = []
full = []

cli = ["clap/default", "clap/derive"]
wasm = []

[lib]
crate-type = ["cdylib", "rlib"]
test = true


[build-dependencies]

[dependencies]
async-trait = "0.1.58"
clap = { features = ["derive"], optional = true, verison = "4.0.29" }
futures = "0.3.25"
hyper = { features = ["full"], version = "0.14.23" }
scsys = { features = ["full"], version = "0.1.36" }
serde = { features = ["derive"], version = "1.0.149" }
serde_json = "1.0.89"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["full"], version = "1.22.0" }
tracing = "0.1.37"
tracing-subscriber = { features = [], version = "0.3.16" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]
