[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
description = "Core package of Acme, an all-in-one developer toolkit targetting decentralized environments"
edition = "2021"
keywords = ["blockchain", "toolkit"]
license = "MIT"
name = "acme-data"
readme = "README.md"
repository = "https://github.com/FL03/acme"
version = "0.1.12" # TODO - Update cargo package version

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
bson = "2.3.0"
chrono = "0.4.19"
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"