[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
description = "Core package of Acme, an all-in-one developer toolkit targetting decentralized environments"
edition = "2021"
keywords = ["blockchain", "toolkit"]
license = "MIT"
name = "acme-data"
readme = "README.md"
repository = "https://github.com/FL03/acme"
version = "0.1.18" # TODO - Update crate version

[features]
default = [
    "external"
]

external = [
    "bson/default",
    "bson/chrono-0_4",
    "bson/serde_with",
    "serde/default",
    "serde/derive",
    "serde_json/default"
]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
async-trait = "0.1.56"
bson = { optional = true, features = ["chrono-0_4", "serde_with"], version = ">=2.3.0" }
chrono = ">=0.4.19"
serde = { features = ["derive"], optional = true, version = ">=1.0.137" }
serde_json = { optional = true, version = "1.0.81" }