[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com)"]
categories = []
description = "Derive macros created for Acme, a client library created for the Scattered-Systems Ecosystem"
edition = "2021"
homepage = "https://gitlab.com/FL03/acme/-/wikis/home"
keywords = ["derive", "proc-macro", "scsys"]
license = "MIT"
name = "acme-derive"
repository = "https://gitlab.com/FL03/acme"
version = "0.2.1" # TODO - Update cargo package version

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = { features = ["full"], version = "1.0.101" }

[dev-dependencies.acme]
path = "../acme"