[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com)"]
categories = []
description = "Procedural macros created to support Acme, a client library created for the Scattered-Systems Ecosystem"
edition = "2021"
homepage = "https://gitlab.com/FL03/acme/-/wikis/home"
keywords = ["proc-macros", "scsys"]
license = "MIT"
name = "acme-macros"
readme = "https://gitlab.com/FL03/acme/#README"
repository = "https://gitlab.com/FL03/acme"
version = "0.2.1" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proc-macro2 = "1.0.43"
quote = "1.0.21"
syn = { features = ["full"], version = "1.0.99" }

[dev-dependencies.acme]
path = "../acme"
