[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com)"]
categories = []
description = "Procedural macros created to support Acme, a client library created for the Scattered-Systems Ecosystem"
edition = "2021"
homepage = "https://gitlab.com/scsys/lib/crates/acme/-/wikis/home"
keywords = ["proc-macros", "scsys"]
license = "MIT"
name = "acme-macros"
repository = "https://gitlab.com/scsys/lib/crates/acme"
version = "0.2.1" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = { features = ["full"], version = "1.0.101" }

[dev-dependencies.acme]
path = "../acme"
