[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com)"]
categories = []
description = "A client library for the Scattered Systems Ecosystem"
edition = "2021"
homepage = "https://gitlab.com/scsys/lib/crates/acme/-/wiki/"
keywords = ["async", "scsys"]
license = "MIT"
name = "acme-minis"
publish = true
readme = "README.md"
repository = "https://gitlab.com/scsys/lib/crates/acme"
version = "0.2.2" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true


[build-dependencies]

[dependencies]
mio = "0.8.4"
scsys = { features = ["full"], git = "https://github.com/scattered-systems/scsys", branch = "v0.1.28", version = "0.1.28" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0.87"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["macros"], version = "1.21.2" }
