[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
description = "acme-network is a featured package of acme, designed around libp2p and tokio in support of SCSYS."
edition = "2021"
keywords = ["asynchronous", "blockchain", "peer-to-peer", "scsys"]
license = "MIT"
name = "acme-network"
readme = "README.md"
repository = "https://github.com/FL03/acme"
version = "0.1.12" # TODO - Update cargo package version

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
chrono = "0.4.19"
config = "0.13.1"
hyper = { features = ["full"], version = "0.14.19" }
libp2p = { features = ["dns-tokio", "tcp-tokio"], version = "0.45.1" }
log = "0.4.17"
once_cell = "1.12.0"
pretty_env_logger = "0.4.0"
tokio = { features = ["full"], version = "1.19.2" }