[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
categories = ["network-programming"]
description = "A client library for the Scattered Systems Ecosystem"
edition = "2021"
homepage = "https://scattered-systems.github.io/acme"
keywords = ["async", "client", "blockchain", "scsys"]
license = "MIT"
name = "acme-network"
publish = true
repository = "https://github.com/scattered-systems/acme.git"
version = "0.2.0" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
async-trait = "0.1.56"
axum = { features = ["headers"], version = "0.5.13" }
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
chrono = "0.4.19"
config = "0.13.1"
glob = "0.3.0"
http = "0.2.8"
hyper = { features = ["full"], version = "0.14.19" }
reqwest = "0.11.11"
serde = { features = ["derive"], version = "1.0.138" }
serde_json = "1.0.82"
tokio = { features = ["full"], version = "1.19.2" }
tower = "0.4.13"
tower-http = { features = ["compression-br", "propagate-header", "sensitive-headers", "trace"], version = "0.3.4" }
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[dependencies.scsys]
features = ["full"]
optional = false
version = "0.1.9"