[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com)"]
categories = []
description = "A client library for the Scattered Systems Ecosystem"
edition = "2021"
homepage = "https://gitlab.com/FL03/acme/-/wikis/home"
keywords = ["async", "scsys"]
license = "MIT"
name = "acme-protocol"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/acme.git"
version = "0.2.1" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true


[build-dependencies]

[dependencies]
mio = "0.8.4"
serde = { default-features = false, features = ["derive"], version = "1.0.145" }
tokio = { features = [], version = "1.21.2" }
