[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://pzzld.eth.link/)"]
description = ""
edition = "2021"
keywords = ["blockchain", "toolkit"]
name = "acme-cli"
version = "0.1.0"

[dependencies]
acme = { features = ["full"], version = "0.1.16" }
clap = "3.1.18"
config = "0.13.1"
tokio = { features = ["full"], version = "1.19.2" }
tower = "0.4.12"
tower-http = { features = ["trace"], version = "0.3.4" }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"