[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = ["blockchain", "peer-to-peer", "toolkit"]
description = ""
edition = "2021"
keywords = ["blockchain", "toolkit"]
name = "acme-chains"
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
