[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = ["blockchain", "peer-to-peer", "toolkit"]
description = ""
edition = "2021"
keywords = ["blockchain", "toolkit"]
license = "MIT"
name = "acme-data"
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]
