[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
description = "Acme was created to be an all-in-one blockchain toolkit in support of the Scattered-Systems ecosystem"
edition = "2021"
keywords = ["blockchain", "scsys", "toolkit"]
license = "MIT"
name = "acme"
publish = true
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
version = "0.1.33" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
name = "acme"
test = true

[dependencies]
async-trait = "0.1.56"
acme-sdk = { features = ["full"], path = "../sdk", version = "0.1.0" }
axum = { features = ["headers"], version = "0.5.10" }
bson = { features = ["chrono-0_4", "serde_with"], version = "2.3.0" }
chrono = "0.4.19"
clap = "3.2.8"
config = "0.13.1"
glob = "0.3.0"
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"
tokio = { features = ["full"], version = "1.19.2" }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"