[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com)"]
categories = []
description = "Acme is a complete networking toolkit for wasm enabling dvelopers to quickly build powerful p2p applications"
edition = "2021"
homepage = "https://github.com/scattered-systems/acme/wikis"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "acme"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/acme"
version = "0.2.2" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[features]
default = ["clusters", "conduits", "core"]
full = ["core", "extras", "wasm"]

core = ["acme-core"]
extras = []

clusters = ["acme-clusters"]
conduits = ["acme-conduits"]

wasm = [
    "wasm-ext"
]
wasm-ext = []

[build-dependencies]

[dependencies]
acme-clusters = { features = [], optional = true, path = "../clusters", version = "0.2.2" }
acme-conduits = { features = [], optional = true, path = "../conduits", version = "0.2.2" }
acme-core = { features = [], optional = true, path = "../core", version = "0.2.2" }
acme-compilers = { features = [], optional = true, path = "../compilers", version = "0.2.2" }
acme-gateways = { features = [], optional = true, path = "../gateways", version = "0.2.2" }
acme-pipelines = { features = [], optional = true, path = "../pipelines", version = "0.2.2" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]
