[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com)"]
categories = []
description = "Acme is a complete development toolkit for extending platform functionality"
edition = "2021"
homepage = "https://github.com/scattered-systems/acme/wikis"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "acme"
publish = true
readme = "README.md"
repository = "https://github.com/scattered-systems/acme"
version = "0.2.4" # TODO - Update cargo package version

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[features]
default = ["core"]
full = ["clusters", "conduits", "core", "compilers", "extras", "gateways", "pipelines",]


core = ["acme-core"]
extras = []

clusters = ["acme-clusters"]
conduits = ["acme-conduits"]
compilers = ["acme-compilers"]
gateways = ["acme-gateways"]
pipelines = ["acme-pipelines"]

[build-dependencies]

[dependencies]
acme-clusters = { features = [], optional = true, path = "../clusters", version = "0.2.4" }
acme-conduits = { features = [], optional = true, path = "../conduits", version = "0.2.4" }
acme-core = { features = [], optional = true, path = "../core", version = "0.2.4" }
acme-compilers = { features = [], optional = true, path = "../compilers", version = "0.2.4" }
acme-gateways = { features = [], optional = true, path = "../gateways", version = "0.2.4" }
acme-pipelines = { features = [], optional = true, path = "../pipelines", version = "0.2.4" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
