[package]
authors = ["FL03 <jo3mccain@icloud.com>"]
categories = ["blockchain", "peer-to-peer", "toolkit"]
description = "Powering blockchain experiences with the acme package"
edition = "2021"
keywords = ["blockchain", "toolkit"]
license = "MIT"
name = "acme-chains"
readme = "README.md"
repository = "https://github.com/FL03/acme.git"
version = "0.1.0"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
bson = "2.3.0"
chrono = "0.4.19"
hex = "0.4.3"
log = "0.4.17"
serde = { features = ["derive"], version = "1.0.137" }
serde_json = "1.0.81"
sha2 = "0.10.2"