[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
description = "Core package of Acme, an all-in-one developer toolkit targetting decentralized environments"
edition = "2021"
keywords = ["blockchain", "toolkit"]
license = "MIT"
name = "acme-chains"
readme = "README.md"
repository = "https://github.com/FL03/acme"
version = "0.1.6" # TODO - Update crate version

[features]
default = [
    "external"
]
external = [
    "hex/default",
    "log/std",
    "once_cell/std",
    "sha2/default",
    "serde/derive",
    "serde_json/default"
]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
test = true

[dependencies]
chrono = "0.4.19"
glob = "0.3.0"
hex = { optional = true, version = "0.4.3" }
log = { optional = true, version = "0.4.17" }
once_cell = { optional = true, version = "1.12.0" }
pretty_env_logger = "0.4.0"
serde_json = { optional = true, version = "1.0.81" }
sha2 = "0.10.2"

[dependencies.bson]
features = ["chrono-0_4", "serde_with"]
version = "2.3.0"

[dependencies.serde]
optional = true
features = ["derive"]
version = "1.0.137"

[dev-dependencies.acme-core]
path = "../core"