[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "acme"
edition = "2021"
homepage = "https://github.com/FL03/acme/wiki"
keywords = ["scsys"]
license = "Apache-2.0"
name = "acme-conduits"
repository = "https://github.com/FL03/acme"
version = "0.2.5"

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dependencies]
mio = "0.8.4"
scsys = { features = ["full"], version = "0.1.40" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["macros"], version = "1.21.2" }

[dev-dependencies]

[target.wasm32-unknown-unknown]
