[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems (https://github.com/scattered-systems)"]
categories = []
description = "acme"
edition = "2021"
homepage = "https://github.com/scattered-systems/acme/wiki"
keywords = ["scsys"]
license = "Apache-2.0"
name = "acme-core"
repository = "https://github.com/scattered-systems/acme"
version = "0.2.2"

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
async-trait = "0.1.59"
axum = "0.6.1"
clap = { features = ["derive"], version = "4.0.29" }
hyper = { features = ["full"], version = "0.14.23" }
http = "0.2.8"
http-body = "0.4.5"
scsys = { features = ["full"], version = "0.1.36" }
serde = { features = ["derive"], version = "1.0.149" }
serde_json = "1.0.89"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["macros", "signal"], version = "1.23.0" }
tower = "0.4.13"
tower-http = { features = [], version = "0.3.5" }
tracing = { features = [], version = "0.1.37" }
tracing-subscriber = { features = [], version = "0.3.16" }

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
