[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)"]
categories = []
description = "acme"
edition = "2021"
homepage = "https://github.com/FL03/acme/wiki"
keywords = ["scsys"]
license = "Apache-2.0"
name = "acme-core"
repository = "https://github.com/FL03/acme"
version = "0.2.4"

[features]
default = [ "cli"]
full = [ "cli" ]

cli = [ "clap/cargo", "clap/derive", "clap/default", "clap/env"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]

[dependencies]
async-trait = "0.1.60"
axum-core = "0.3.0"
clap = { features = ["cargo", "derive", "env"], optional = true, version = "4.0.29" }

scsys = { features = ["full"], version = "0.1.38" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
strum = { features = ["derive"], version = "0.24.1" }
tokio = { features = ["macros", "signal"], version = "1.23.0" }
tracing-subscriber = "0.3.16"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
