[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Joe McCain III <jo3mccain@scattered-systems.com>"]
description = "Derive macros for the acme-cli in support of the Scattered-Systems ecosystem"
edition = "2021"
keywords = ["derive", "proc-macro", "scsys"]
name = "acme-derive"
license = "MIT"
readme = "README.md"
repository = "https://github.com/FL03/acme"
version = "0.1.0" # TODO - Current Release v0.1.0

[lib]
bench = false
proc-macro = true
test = true

[features]
default = []

[[test]]
name = "test"
path = "tests/test.rs"
test = true

[dependencies]

[dev-dependencies]
acme = { path = "../acme", version = "0.1.25" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]